[project]
name = "space-invaders"
version = "0.1.0"
description = "Retro space invaders built with pygame"
authors = [
    {name = "alvarogenmv16",email = "alvarogenmv16@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
